--- a/bower.json
+++ b/bower.json
@@ -25,11 +25,12 @@
   ],
   "devDependencies": {
     "angular-mocks": ">=1.3.0",
-    "jquery": ">=1.6",
     "angular-ui-router": "ui-router#^0.2.18",
-    "clipboard": "^1.5.9"
+    "clipboard": "^1.5.9",
+    "jquery": ">=1.6"
   },
   "dependencies": {
-    "angular": "^1.4.8"
+    "angular": "^1.5.5",
+    "angular-animate": "^1.5.5"
   }
 }
