--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "test": "./node_modules/.bin/karma start --browsers Chrome"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-ejs": "^2.1.1",
-    "babel-preset-es2015": "^6.6.0",
-    "gulp-babel": "^6.1.2",
     "gulp-filter": "^3.0.1",
     "gulp-if": "^2.0.0",
     "gulp-insert": "^0.5.0",
