--- a/bower.json
+++ b/bower.json
@@ -24,13 +24,13 @@
     "karma.conf.js"
   ],
   "devDependencies": {
-    "angular-mocks": ">=1.3.0",
-    "angular-ui-router": "ui-router#^0.2.18",
+    "angular-mocks": "1.5.8",
+    "angular-ui-router": "1.0.0-alpha.5",
     "clipboard": "^1.5.9",
     "jquery": ">=1.6"
   },
   "dependencies": {
-    "angular": "^1.5.5",
-    "angular-animate": "^1.5.5"
+    "angular": "1.5.8",
+    "angular-animate": "1.5.8"
   }
 }
