--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
   "name": "ng-mr-uex",
-  "version": "0.0.0",
+  "version": "0.2.1",
+  "description": "Contains a collection of components for angularjs.",
+  "main": "dist/ng-mr-uex.js",
   "author": "Mohammad Rahhal <m.r992@hotmail.com>",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "test": "./node_modules/.bin/karma start --browsers Chrome"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrahhal/ng-mr-uex.git"
+  },
+  "homepage": "https://github.com/mrahhal/ng-mr-uex#readme",
+  "bugs": {
+    "url": "https://github.com/mrahhal/ng-mr-uex/issues"
+  },
+  "keywords": [
+    "angular",
+    "angularjs",
+    "component"
+  ],
+  "dependencies": {
+    "angular": "1.5.8",
+    "angular-animate": "1.5.8"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
