--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-sass-glob": "0.0.8",
+    "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
