--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -3,15 +3,17 @@
   "max_preserve_newlines": 2,
   "end_with_newline": true,
   "js": {
+    "indent_with_tabs": true,
+    "indent_size": 2,
     "preserve_newlines": true,
     "max_preserve_newlines": 2,
-    "space_after_anon_function": true,
-    "end_with_newline": true
+    "space_after_anon_function": true
   },
   "css": {
+    "indent_with_tabs": false,
+    "indent_size": 2,
     "preserve_newlines": true,
     "max_preserve_newlines": 2,
-    "newline_between_rules": true,
-    "end_with_newline": true
+    "newline_between_rules": true
   }
 }
