--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,19 +1,21 @@
 {
+  "indent_size": 2,
   "preserve_newlines": true,
   "max_preserve_newlines": 2,
   "end_with_newline": true,
+  "eol": "\r\n",
   "js": {
     "indent_with_tabs": true,
     "indent_size": 2,
-    "preserve_newlines": true,
-    "max_preserve_newlines": 2,
-    "space_after_anon_function": true
+    "space_after_anon_function": true,
+    "max_preserve_newlines": 2
   },
   "css": {
     "indent_with_tabs": false,
     "indent_size": 2,
-    "preserve_newlines": true,
-    "max_preserve_newlines": 2,
     "newline_between_rules": true
+  },
+  "html": {
+    "indent_size": 2
   }
 }
